Jan. 19th 2024 FirstCommit

--- a/前端.md
+++ b/前端.md
@@ -2626,12 +2626,16 @@ btn.onclick = function(){
     - Access-Control-Allow-Methods：设置允许跨域请求的方法，默认get、post
     - Access-Control-Allow-Headers：允许发送请求时携带自定义的请求头
 
-  - ```java
+  - 使用（HttpServletResponse）
+  
+    ```java
     response.setHeader("Access-Control-Allow-Origin", "*");
     response.setHeader("Access-Control-Allow-Methods", "*");
     response.setHeader("Access-Control-Allow-Headers", "*");
     ```
-
+  
+    
+  
     
 
 
