--- a/后端2.md
+++ b/后端2.md
@@ -1385,6 +1385,254 @@ new ServerBootstrap()
 
 
 
+# Webflux
+
+## 基础
+
+### 异步Servlet
+
+- 实例
+
+  ```java
+  @WebServlet(value = "/async", asyncSupported = true)
+  public class AsyncServlet extends HttpServlet {
+      @Override
+      protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+          AsyncContext asyncContext = req.startAsync();
+          long start = System.currentTimeMillis();
+  
+          CompletableFuture.runAsync(() -> 
+                  doSomeThings(asyncContext, asyncContext.getRequest(), asyncContext.getResponse()));
+  
+          System.out.printf("共用时：%sms\n", System.currentTimeMillis()-start);
+      }
+  
+      private void doSomeThings(AsyncContext asyncContext, ServletRequest req, ServletResponse resp) {
+          try {
+              TimeUnit.SECONDS.sleep(5);
+          } catch (InterruptedException ignore) {}
+          try {
+              resp.setContentType("text/html;charset=utf-8");
+              resp.getWriter().write("完成");
+          } catch (IOException e) {
+              throw new RuntimeException(e);
+          }
+          asyncContext.complete();
+      }
+  }
+  ```
+
+- 如果你的servlet或filter链中有任何一个不支持异步操作，那么就会抛出 `java.lang.IllegalStateException: A filter or servlet of the current chain does not support asynchronous operations.`
+
+  - 解决这个问题的方法是，需要**确保所有servlet和filter都支持异步操作**。可以通过在servlet或filter的注解中添加`asyncSupported=true`来启用异步支持。
+
+
+
+### Controller
+
+- 引入依赖（注意：不要引入spring-boot-starter-web依赖）
+
+  ```xml
+  <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+  </dependency>
+  ```
+
+- `userService.findAll()`：返回的是一个流
+
+- 返回 `Mono` 对象
+
+  ```java
+  @GetMapping(value = "/{id}", produces = {MediaType.APPLICATION_JSON_VALUE})
+  public Mono<User> findById(@PathVariable int id) {
+      return userService.findById(id);
+  }
+  ```
+
+- 返回 `Flux` 对象
+
+  ```java
+  @GetMapping(value = "/getAll", produces = "text/event-stream;charset=UTF-8")
+  public Flux<User> getAll() {
+      return userService.findAll()
+          .delayElements(java.time.Duration.ofSeconds(1));
+  }
+  ```
+
+
+
+### SSE
+
+- Servlet代码
+
+  ```java
+  @WebServlet("/sse")
+  public class SSEServlet extends HttpServlet {
+      @Override
+      protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws ServletException, IOException {
+          resp.setContentType("text/event-stream");
+          resp.setCharacterEncoding("utf-8");
+  
+          for (int i = 0; i < 10; i++) {
+              // 指定事件标识，格式：event: + 事件名字 + 2个换行
+              resp.getWriter().write("event:me\n");
+              // 发送数据流，格式：data: + 数据 + 2个换行
+              resp.getWriter().write("data: " + i + "\n\n");
+              resp.getWriter().flush();
+              try {
+                  TimeUnit.SECONDS.sleep(1);
+              } catch (InterruptedException e) {
+                  e.printStackTrace();
+              }
+          }
+          
+          resp.getWriter().write("event:me\n");
+          resp.getWriter().write("data: " + "end" + "\n\n");
+      }
+  }
+  ```
+
+- 前端
+
+  ```js
+  let sse = new EventSource("/servlet_test_war/sse");
+  let textarea = document.querySelector(".textarea");
+  
+  // 不指定事件标志，会默认使用 message 事件
+  sse.onmessage = function (event) {
+      console.log("event: ", event)
+      console.log("event.data: ", event.data);
+      textarea.innerHTML = textarea.innerHTML + " " + event.data;
+  };
+  
+  // 指定事件标志，不会使用默认的 message 事件
+  sse.addEventListener("me", function (event) {
+      // 如果服务端发送 end，则关闭连接，否则会不断发起数据流请求
+      if (event.data === "end") sse.close(); 
+      console.log("event: ", event)
+      console.log("event.data: ", event.data);
+      textarea.innerHTML = textarea.innerHTML + " " + event.data;
+  });
+  ```
+
+
+
+
+
+### Router Functions
+
+- Service：返回值是Mono、Flux对象
+
+  ```java
+  @Service
+  public class UserService {
+      public Flux<User> findAll() { ... }
+      public Mono<User> findById(String id) { ... }
+  }
+  ```
+
+- 路由
+
+  ```java
+  //@Configuration
+  public class AllRouters {
+      @Bean
+      RouterFunction<ServerResponse> userRouter(UserRouterHandler userRouterHandler) {
+          return RouterFunctions.nest(RequestPredicates.path("/user"),
+                  RouterFunctions
+                          .route(RequestPredicates.GET("/getAll"), userRouterHandler::getAllUser)
+                          .andRoute(RequestPredicates.GET("/{id}"), userRouterHandler::getUserById));
+      }
+  }
+  ```
+
+- 处理
+
+  ```java
+  @Component
+  public class UserRouterHandler {
+      @Autowired
+      private UserService userService;
+  
+      public Mono<ServerResponse> getAllUser(ServerRequest request) {
+          return ServerResponse
+                  .ok()
+                  .contentType(MediaType.APPLICATION_NDJSON)
+                  .body(userService.findAll().delayElements(Duration.ofMillis(1000)), User.class);
+      }
+  
+      public Mono<ServerResponse> getUserById(ServerRequest request) {
+          return ServerResponse
+                  .ok()
+                  .contentType(MediaType.APPLICATION_NDJSON)
+                  .body(userService.findById(request.pathVariable("id")),
+                          User.class);
+      }
+  }
+  ```
+
+- `MediaType.APPLICATION_NDJSON`："application/x-ndjson"
+
+  - 在Spring 5.2及更高版本中，`MediaType.APPLICATION_STREAM_JSON`已被弃用。取而代之的是`MediaType.APPLICATION_NDJSON`，它表示Newline Delimited JSON，也就是每个JSON对象之间由换行符分隔。
+  - NDJSON，全称为Newline Delimited JSON，是一种存储多个JSON对象的格式，每个JSON对象占一行，对象之间通过换行符分隔
+  - 这种格式主要用于处理大量的JSON对象，特别是在流式处理中
+  - 如果直接访问`Content-Type`为`application/x-ndjson`的地址，浏览器可能不知道如何处理这种类型的数据，所以它选择下载文件。需要在前端使用JavaScript来处理
+
+
+
+
+
+## R2DBC
+
+### 介绍
+
+- R2DBC（Reactive Relational Database Connectivity）是一个非阻塞的数据库连接API，它是由Spring团队开发的，目前主要在Spring WebFlux等反应式编程环境中使用
+
+- 目前，Jakarta EE（以前的Java EE）还没有包含R2DBC的规范。Jakarta EE的数据访问规范主要是JPA（Java Persistence API）和JDBC（Java Database Connectivity），这两者都是阻塞式的API。
+
+- 反应式编程模型是一种编程范式，它的核心思想是以数据流和变化传播为基础。在反应式编程模型中，当一个数据源（如变量、数据结构等）发生变化时，这个变化会自动传播到与这个数据源相关的其他部分。
+
+  反应式编程模型有几个关键特性：
+
+  1. **响应式流**：反应式编程模型中的数据流是异步的，可以处理零个或多个数据项，还可以处理完成和错误信号。这种数据流模型可以很好地处理异步和非阻塞操作，特别是在处理大量数据或长时间运行的操作时。
+
+  2. **非阻塞**：在反应式编程模型中，所有的操作都是非阻塞的，这意味着在等待数据时，程序不会阻塞当前线程，而是会继续执行其他任务。这可以提高程序的并发处理能力，特别是在处理大量并发请求的场景下。
+
+  3. **回压**：反应式编程模型支持回压（backpressure），这是一种流控制机制，可以防止在处理大量数据时出现内存溢出。通过回压，消费者可以控制生产者的数据生成速率，以防止生产者生成数据的速度超过消费者处理数据的速度。
+
+  反应式编程模型在处理大量并发请求、实时数据流、微服务通信等场景下有很大的优势。例如，Spring WebFlux就是一个基于反应式编程模型的Web框架，它可以提供高并发、低延迟的Web服务。
+
+- 编程范式是一种编程语言的分类方式，它描述了编程语言的特性和风格。以下是一些常见的编程范式：
+
+  1. **命令式编程**：这是最常见的编程范式，它描述了"如何做"。在命令式编程中，程序员会写出一系列的命令或语句来改变程序的状态。大多数常见的编程语言，如C、Java、Python等，都支持命令式编程。
+  2. **声明式编程**：与命令式编程相对，声明式编程描述了"要做什么"，而不是"如何做"。在声明式编程中，程序员只需要描述他们想要的结果，而不需要关心如何达到这个结果。SQL就是一种声明式编程语言。
+  3. **函数式编程**：函数式编程是一种声明式编程的子范式，它把计算视为函数的求值。在函数式编程中，函数是第一类对象，可以作为参数传递，也可以作为结果返回。函数式编程强调无副作用和引用透明性。Haskell和Scala是两种常见的函数式编程语言。
+  4. **面向对象编程**：面向对象编程是一种编程范式，它使用"对象"来设计软件。在面向对象编程中，对象是类的实例，类定义了对象的属性和方法。面向对象编程强调封装、继承和多态。Java和C++是两种常见的面向对象编程语言。
+  5. **逻辑编程**：逻辑编程是一种声明式编程的子范式，它使用逻辑来描述问题和计算。在逻辑编程中，程序是一组逻辑公式，计算是通过逻辑推理进行的。Prolog是一种常见的逻辑编程语言。
+  6. **并发编程**：并发编程是一种编程范式，它用于编写可以同时执行多个任务的程序。在并发编程中，程序员需要处理线程、锁、同步和异步等概念。Java和Go都提供了并发编程的支持。
+  7. **反应式编程**：反应式编程是一种编程范式，它用于编写响应事件或变化的程序。在反应式编程中，程序是一组响应事件的函数或方法。反应式编程可以用于创建交互式的用户界面，或处理异步事件。RxJava和Spring WebFlux都支持反应式编程。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # JUC
 
 
