--- a/有趣的项目.md
+++ b/有趣的项目.md
@@ -1,4 +1,4 @@
-# EasyExcel
+# [EasyExcel](https://easyexcel.opensource.alibaba.com/docs/current/)
 
 ## 导入
 
@@ -35,6 +35,8 @@
   System.out.println(map); // {0=1, 1=张三, 2=男, 3=2002年3月12日}
   ```
 
+- 一次性读取可能会导致内存溢出
+
 
 
 ### 模型映射
@@ -47,6 +49,13 @@
 - 自定义解析
 
   - `@ExcelProperty(converter = 自定义格式转换.class)`
+
+- **截止到 3.3.1 版本，转换器Converter 仍不支持基本数据类型，因此建议所有基本类型都用其对应的包装类**
+
+  ```java
+  @ExcelProperty(value = "性别", converter = GenderConverter.class)
+  private Boolean isMan;
+  ```
 
 - 使用
 
@@ -63,13 +72,13 @@
   @ToString
   public class Person {
       @ExcelProperty("id")
-      private int id;
+      private Integer id;
   
       @ExcelProperty("姓名")
       private String name;
   
-      @ExcelProperty("性别")
-      private String gender;
+      @ExcelProperty(value = "性别", converter = GenderConverter.class)
+      private Boolean isMan;
   
       @ExcelProperty(value = "生日", converter = LocalDateConverter.class)
       private LocalDate birthday;
@@ -149,10 +158,14 @@
   }
   ```
 
-- 优点：**访问者模式**
+- 优点：
 
-  - 一方面可以将处理逻辑独立出来，使代码更美观
-  - 另一方面可以添加多个ReadListener，实现只遍历一遍excel数据，达到多处理器**实时处理**（读取一条处理一条）的效果
+  - 可以制定分批读取，从而避免内存溢出
+  
+  - **访问者模式**
+    - 一方面可以将处理逻辑独立出来，使代码更美观
+    - 另一方面可以添加多个ReadListener，实现只遍历一遍excel数据，达到多处理器**实时处理**（读取一条处理一条）的效果
+  
 
 
 
@@ -171,6 +184,42 @@ public List<InfoModel> upload(MultipartFile file) {
 
 
 
+### 读取多个sheet
+
+- 同一个sheet不可重复读取
+
+- 读取所有sheet
+
+  ```java
+  // 不指定sheet (.sheet())，即读取所有
+  EasyExcel
+      .read(...)
+      .head(...)
+      .registerReadListener(...)
+      .doReadAll(); // 或 .doReadAllSync();
+  ```
+
+- 读取多个sheet
+
+  ```java
+  try(ExcelReader excelReader = EasyExcel.read(inputStream).build()) {
+      ReadSheet readSheet = EasyExcel.readSheet()
+          .head(Person.class)
+          .registerReadListener(...)
+          .build();
+      ReadSheet readSheet2 = EasyExcel.readSheet()....build();
+      ...
+          
+      excelReader.read(readSheet, readSheet2, ...);
+  }
+  ```
+
+  
+
+
+
+
+
 ## 导出
 
 ### 快速入门
@@ -182,7 +231,7 @@ public List<InfoModel> upload(MultipartFile file) {
       .write(导出目标)
       .sheet()
       .head(映射模型.class) // 指定映射模型
-      
+      .registerWriteHandler(new LongestMatchColumnWidthStyleStrategy())
       .doWrite(集合数据);
   ```
 
@@ -197,6 +246,64 @@ public List<InfoModel> upload(MultipartFile file) {
   - `List<List<Object>>`：{{1, "张三", "男"}, ...}
   - `List<Map<Integer, Object>>`：{{0=1, 1="张三", 2="男"}, ...}
   - `List<Object>`：同一个类
+
+
+
+### 重复多次写入
+
+> 如果一次性的写入大量数据，需要一个数据量非常大的集合。这很可能导致**内存溢出**
+>
+> 另一方面，如果数据过多，一个 excel 的 sheet 无法放下，需要写到多个 sheet 中
+
+- 同一类对象，重复多次写入到同一个sheet中
+
+  ```java
+  String fileName = "test.xlsx";
+  
+  // 这里 需要指定写用哪个class去写
+  try (ExcelWriter excelWriter = EasyExcel.write(fileName, DemoData.class).build()) {
+      // 这里注意 如果同一个sheet只要创建一次
+      WriteSheet writeSheet = EasyExcel.writerSheet("模板").build();
+      
+      for (int i = 0; i < 5; i++) { // 模拟多次
+          List<DemoData> data = data(); // 模拟获取数据
+          excelWriter.write(data, writeSheet);
+      }
+  }
+  ```
+
+- 同一类对象，重复多次写入到**多个**sheet中
+
+  ```java
+  fileName = "test.xlsx";
+  
+  // 这里 需要指定写用哪个class去写
+  try (ExcelWriter excelWriter = EasyExcel.write(fileName, DemoData.class).build()) {
+      for (int i = 0; i < 5; i++) {
+          // 每次都要创建writeSheet 这里注意必须指定sheetNo 而且sheetName必须不一样
+          WriteSheet writeSheet = EasyExcel.writerSheet(i, "模板" + i).build();
+          
+          List<DemoData> data = data();
+          excelWriter.write(data, writeSheet);
+      }
+  }
+  ```
+
+- **不同类对象**，重复多次写入到**多个**sheet中
+
+  ```java
+  fileName = "test.xlsx";
+  // 这里只指定文件
+  try (ExcelWriter excelWriter = EasyExcel.write(fileName).build()) {
+      for (int i = 0; i < 5; i++) {
+          // 实际上可以一直变
+          WriteSheet writeSheet = EasyExcel.writerSheet(i, "模板" + i).head(DemoData.class).build();
+          
+          List<DemoData> data = data();
+          excelWriter.write(data, writeSheet);
+      }
+  }
+  ```
 
 
 
@@ -240,7 +347,7 @@ public List<InfoModel> upload(MultipartFile file) {
       
       @ExcelProperty("积分")
       @NumberFormat("#.##")
-      private double score;
+      private Double score;
       
       @ExcelProperty(value = {"基本信息", "生日"})
       @DateTimeFormat(value = "yyyy年MM月dd日")
@@ -379,11 +486,24 @@ public List<InfoModel> upload(MultipartFile file) {
   - 实现类
 
     ```java
+    import com.alibaba.excel.metadata.Head;
+    import com.alibaba.excel.metadata.data.WriteCellData;
+    import com.alibaba.excel.write.handler.CellWriteHandler;
+    import com.alibaba.excel.write.metadata.holder.WriteSheetHolder;
+    import com.alibaba.excel.write.metadata.holder.WriteTableHolder;
+    import org.apache.poi.ss.usermodel.Cell;
+    import org.apache.poi.ss.usermodel.CellType;
+    import org.apache.poi.ss.usermodel.Row;
+    import org.apache.poi.ss.usermodel.Sheet;
+    import org.apache.poi.ss.util.CellRangeAddress;
+    
+    import java.util.List;
+    
     public class MergeCellWriteHandler implements CellWriteHandler {
         private final List<String> fieldsNeedMerge;
     
-        public MergeCellWriteHandler(List<String> columnsNeedNotMerge) {
-            fieldsNeedMerge = columnsNeedNotMerge;
+        public MergeCellWriteHandler(String... fieldsNeedMerge) {
+            this.fieldsNeedMerge = Arrays.asList(fieldsNeedMerge);
         }
     
         @Override
@@ -395,7 +515,7 @@ public List<InfoModel> upload(MultipartFile file) {
             if (relativeRowIndex == 0) return;
     
             // 如果该列不需要合并，则不处理
-            if (fieldsNeedMerge == null || !fieldsNeedMerge.contains(head.getFieldName())) return;
+            if (fieldsNeedMerge == null || head == null || !fieldsNeedMerge.contains(head.getFieldName())) return;
     
             // 获得本单元格和本列上一行的单元格，并判断两格内值是否相同，从而判断是否需要合并
             Sheet sheet = cell.getSheet();
@@ -484,11 +604,90 @@ public List<InfoModel> upload(MultipartFile file) {
 
 
 
+### 导出超链接、备注等
+
+- 创建映射类
+
+  ```java
+  @Data
+  public class OneClass {
+      @ExcelIgnore
+      private String data1;
+      @ExcelProperty("为这组数据设置超链接")
+      private WriteCellData<String> data1Cell;
+  
+      @ExcelIgnore
+      private Double data2;
+      @ExcelProperty("为这组数据设置备注")
+      private WriteCellData<String> data2Cell;
+  
+      public OneClass(String data1, Double data2) {
+          this.data1 = data1;
+          this.data2 = data2;
+      }
+  }
+  ```
+
+- 转化：将其他类型 转成 `WriteCellData<String>`
+
+  ```java
+  List<OneClass> list = 
+      List.of(new OneClass("这是一个url", 5.20), new OneClass("这是另一个url", 13.14));
+  
+  list = list.stream()
+      .peek(oneClass -> {
+          // 此处转换
+      })
+      .collect(Collectors.toList());
+  
+  // 导出到 Excel
+  ```
+
+- 超链接：`HyperlinkData`
+
+  ```java
+  oneClass -> {
+      WriteCellData<String> data1Cell = new WriteCellData<>(oneClass.getData1());
+      HyperlinkData hyperlinkData = new HyperlinkData();
+      hyperlinkData.setAddress("https://github.com/alibaba/easyexcel");
+      hyperlinkData.setHyperlinkType(HyperlinkData.HyperlinkType.URL);
+      data1Cell.setHyperlinkData(hyperlinkData);
+      oneClass.setData1Cell(data1Cell);
+  }
+  ```
+
+  - 常用超链接类型
+    - URL：地址
+    - FILE：本地文件
+    - EMAIL：邮箱
+
+- 备注：`CommentData`
+
+  ```java
+  oneClass -> {
+      WriteCellData<String> data2Cell = new WriteCellData<>(String.format("%.2f", oneClass.getData2()));
+      CommentData commentData = new CommentData();
+      commentData.setAuthor("作者");
+      commentData.setRichTextStringData(new RichTextStringData("备注内容"));
+      
+      // 备注的默认大小是按照单元格的大小 
+      // 这里想调整到4个单元格那么大，所以向后、向下各额外占用了一个单元格
+      commentData.setRelativeLastColumnIndex(1);
+      commentData.setRelativeLastRowIndex(1);
+      data2Cell.setCommentData(commentData);
+      oneClass.setData2Cell(data2Cell);
+  }
+  ```
+
+- [其他格式：](https://easyexcel.opensource.alibaba.com/docs/current/quickstart/write#超链接备注公式指定单个单元格的样式单个单元格多种样式)easyexcel官网查看
+
+
+
 ## 模板填充
 
 ### 快速入门
 
-- Excel模版文件（前面加**.**表示填充列表，否则只能填充一条数据）
+- Excel模版文件（占位符前面加**.**表示填充列表，否则只能填充一条数据）
 
   <table>
       <tr><td colspan=2>用户信息</td><td colspan=2>用户信息</td></tr>
@@ -511,11 +710,7 @@ public List<InfoModel> upload(MultipartFile file) {
 - obj类型（填充列表）
 
   - `List<Map<String, Object>>`：map集合的键与模版中占位字段一致
-  - `实体类对象`：属性名与模版中占位字段一致
-
-
-
-
+  - `List<实体类>`：属性名与模版中占位字段一致
 
 
 
