Jan. 30th 2024 First Commit

--- a/后端.md
+++ b/后端.md
@@ -2194,6 +2194,52 @@ public class UserController {
 
 
 
+### 说明
+
+- Root ApplicationContext 和 Servlet ApplicationContext 的区别
+
+  - Root ApplicationContext：这是一个全局的上下文，它会被所有的 Servlet 共享。通常，我们会在这个上下文中加载整个应用的配置，例如服务层（Service）、数据访问层（DAO）等等。这个上下文的生命周期从应用启动开始，到应用关闭结束。
+  - Servlet ApplicationContext：这是**每个 Servlet 独有的上下文，它只对应一个 Servlet**。通常，我们会在这个上下文中加载和这个 Servlet 相关的配置，例如控制器（Controller）、视图解析器（ViewResolver）等等。这个上下文的生命周期从 Servlet 创建开始，到 Servlet 销毁结束。
+
+- 为什么要区分这两个 Context
+
+  - 配置隔离：Root ApplicationContext 和 Servlet ApplicationContext 的区分使得我们可以将全局的配置（如服务层、数据访问层等）和 Servlet 相关的配置（如控制器、视图解析器等）分开，使得配置更加清晰，更易于管理。
+  - 资源共享：所有的 Servlet ApplicationContext 都可以访问 Root ApplicationContext 中的 Bean，这意味着我们可以在 Root ApplicationContext 中定义全局的 Bean，然后在所有的 Servlet 中共享这些 Bean。
+  - 生命周期管理：Root ApplicationContext 的生命周期从应用启动开始，到应用关闭结束，而 Servlet ApplicationContext 的生命周期从 Servlet 创建开始，到 Servlet 销毁结束。这样的设计使得我们可以更好地管理 Bean 的生命周期，例如，我们可以在 Root ApplicationContext 中定义长生命周期的 Bean（如服务层的 Bean），在 Servlet ApplicationContext 中定义短生命周期的 Bean（如请求作用域的 Bean）。
+
+- 流程
+
+  - 在 Spring MVC 中，当一个 Servlet 初始化时，Spring 会为这个 Servlet 创建一个 Servlet ApplicationContext。这个 Servlet ApplicationContext 包含了和这个 Servlet 相关的配置，例如控制器（Controller）、视图解析器（ViewResolver）等等。
+
+  - 然后，Spring 会将这个 Servlet ApplicationContext 注册为 ServletContext 的一个属性（其实不一定是属性，可能只是Spring存储的一份对应关系，毕竟ServletContext是javax的）。这样，我们就可以在 Servlet 中通过 ServletContext 获取到 Servlet ApplicationContext，并使用其中的 Bean。
+
+  - 这种设计使得我们可以在 Servlet 中使用 Spring 的功能，例如依赖注入、事务管理等。同时，由于 Servlet ApplicationContext 可以访问 Root ApplicationContext 中的 Bean，我们还可以在所有的 Servlet 中共享全局的 Bean。
+
+    ```java
+    import ...;
+    import org.springframework.web.context.WebApplicationContext;
+    import org.springframework.web.context.support.WebApplicationContextUtils;
+    
+    public class MyServlet extends HttpServlet {
+        public void doGet(HttpServletRequest request, HttpServletResponse response) {
+            // 获取 ServletContext
+            ServletContext servletContext = this.getServletContext();
+            ServletContext servletContext = request.getServletContext();
+    
+            // 通过 ServletContext 获取 WebApplicationContext （即 Servlet ApplicationContext）
+            WebApplicationContext webApplicationContext = WebApplicationContextUtils.getWebApplicationContext(servletContext);
+    
+            // 从 WebApplicationContext 中获取 Bean
+            MyBean myBean = (MyBean) webApplicationContext.getBean("myBean");
+    
+            // 使用 Bean
+            myBean.doSomething();
+        }
+    }
+    ```
+
+
+
 
 
 ## 参数接收
@@ -2446,7 +2492,7 @@ public String date2(@DateTimeFormat(pattern = "yyyy-MM-dd") Date date){
     - 持久化存储
       - setMaxAge(int seconds)
         - 正数：Cookie数据写到硬盘的文件中，持久化存储。cookie的存活时间
-        - 负数：默认值
+        - 负数：默认值（不会被持久化，浏览器关闭，cookie消失）
         - 零：删除cookie信息
 
   - cookie存储中文
